- add description to the map layer toggles
- tile composition panel: need to add what data it's currently reading.
- LIRR & arterials x-ray
- add landmarks

0.5.1 (2025-03-23 dataset update)
- added four material datasets and their respective layer toggles: <=2 floors, >2 floors, <=1940 built year, and >1940 bulit year.
- changed the material names from wood and brick to timber and masonry.

0.5.0 (2025-03-20 map data update)
- major change: reworked the material data.
- merged the brick and stone datasets and added a wood dataset.
- adjusted the tile composition panel's material order so that it reflects the map's layer order.
- adjusted the viewport minimap's zoom level to make the viewport rectangle larger.
- adjusted the rendering method from l.circles to l.circlemarkers that maintain consistent sizes on different zoom levels.
- removed the centroid200 layer.

0.4.0 (2025-03-04 performance & marker update)
- added a few story markers.
- reduced the centroid data size by 97% to 841 KB.
- reduced the tile data size by 95% to 7,677 KB.
- reduced the shoreline data size by 79% to 2,358 KB.
- reduced the bus route data size by 78% to 2,105 KB.
- reduced the zoning data size by 68% to 4,132 KB.
- added 300ms throttling to the tile info mouseover.
- added 100ms throttling to the tile black outline.
- used a different logic for the x-ray maps so that they don't lag as much.
- batch render the material markers.
- now geojson x-ray layers don't interfere with basemap interactions.

0.3.5 (2025-02-24 post-playtesting adjustments pt.2)
- added a neighborhood tile value placeholder.
- added a scroll function to the tile info.
- tile composition ui overhaul.
- enlarged the minimaps by 20%.
- moved the map scale and zoom to the bottom left, along with the viewport minimap.
- adjusted some acronyms and descriptions to be more user-friendly.
- the background colors for the material radar charts can be toggled off along with the chart colors.