@@ -81,7 +81,7 @@
         <!-- Content containers -->
         <div id="referencesContentText" class="content-text">
             <h2>
-                A map about new york city's building materials
+                A Map About New York City's Building Materials
             </h2>
             <button id="toggleSize" style="display: none;">Toggle Size</button>
             <br>
@@ -197,6 +197,23 @@
         </div>
 
         <div class="ticker-wrap">
+            <a href="https://halfward.github.io/haoLee/">
+                <img src="images/contact-icons-01.svg" alt="Hao Lee 2025">
+            </a>
+            <a href="mailto:haolee.arch@gmail.com">
+                <img src="images/contact-icons-02.svg" alt="Email">
+            </a>
+            <a href="https://www.linkedin.com/in/hao-lee-arch">
+                <img src="images/contact-icons-03.svg" alt="LinkedIn">
+            </a>
+            <a href="https://www.behance.net/haoleearch">
+                <img src="images/contact-icons-04.svg" alt="Behance">
+            </a>
+            <a href="https://www.instagram.com/charcoalsheep/?hl=en">
+                <img src="images/contact-icons-05.svg" alt="Instagram">
+            </a>
+        </div>
+        <!-- <div class="ticker-wrap">
             <div class="ticker">
                 <span class="item-collection-1">
                     <span class="item"><a href="https://halfward.github.io/haoLee/">hao lee 2025</a>    <a href="mailto:haolee.arch@gmail.com">email    </a> <a href="https://www.linkedin.com/in/hao-lee-arch">linkedin    </a> <a href="https://www.behance.net/haoleearch">behance    </a></span>
@@ -211,7 +228,7 @@
                     <span class="item"><a href="https://halfward.github.io/haoLee/">hao lee 2025</a>    <a href="mailto:haolee.arch@gmail.com">email    </a> <a href="https://www.linkedin.com/in/hao-lee-arch">linkedin    </a> <a href="https://www.behance.net/haoleearch">behance    </a></span>
                 </span>
             </div>
-        </div>
+        </div> -->
 
         <div id="control-panel">
             <div class="control-toggle" id="control-toggle">
