@@ -1333,6 +1333,7 @@ sup {
     scrollbar-width: thin;
     scrollbar-color: #bfcdcd transparent;
     border-top: 1px solid #bfcdcd;
+    border-bottom: 1px solid #bfcdcd;
     box-sizing: border-box; 
 }
 .scrollable-text-references {
@@ -1342,58 +1343,25 @@ sup {
 /* Ticker ------------------------------------------*/
 .ticker-wrap {
     width: 100%;
-    height: 30px;
-    overflow: hidden;
-    white-space: nowrap;
+    height: 60px;
     position: fixed;
     bottom: 0;
-    background-color: rgb(230, 230, 230);
     display: flex;
     align-items: center;
+    justify-content: left;
+    padding-left: 35px;
+    gap: 10px;
     z-index: 9999;
 }
-.ticker-wrap:hover .ticker {
-    animation-play-state: paused; 
+.ticker-wrap img{
+    height: 24px;
+    width: auto;
+    opacity: 0.3;
+    transition: opacity 0.1s ease;
 }
-.ticker {
-    display: inline-block;
-    animation: marquee 60s linear infinite;
+.ticker-wrap img:hover {
+    opacity: 1;
 }
-.item-collection-1 {
-    position: relative;
-    left: 0;
-    animation: swap 60s linear infinite;
-}
-.item {
-    display: inline-block;
-    padding: 0;
-    font-size: 0.8rem;
-    font-weight: 400;
-}
-.item a{
-    text-decoration: none;
-}
-.item a:hover {
-    font-weight: 700;
-}
-
-@keyframes marquee {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-@keyframes swap {
-    0%, 50% {
-        left: 0%;
-    }
-    50.01%, 100% {
-        left: 100%;
-    }
-}
-
 
 
 
