@@ -9,6 +9,7 @@ to-do:
 0.5.1 (2025-03-23 dataset update)
 - added four material datasets and their respective layer toggles: <=2 floors, >2 floors, <=1940 built year, and >1940 bulit year.
 - changed the material names from wood and brick to timber and masonry.
+- removed the contact info animation to improve web performance.
 
 0.5.0 (2025-03-20 map data update)
 - major change: reworked the material data.
